# cbor2

./: .gitignore  AGENTS.md  CHANGELOG.md  COPYING  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
cbor-derive/: Cargo.toml
cbor-derive/src/: lib.rs
cbor2-bench/: .gitignore  Cargo.toml  README.md  parse_results.py
cbor2-bench/benches/: alloc.rs  no_alloc.rs  std.rs
cbor2-bench/src/: lib.rs
cbor2-cli/: Cargo.toml  README.md  README.zh-CN.md
cbor2-cli/src/: main.rs
cbor2-cli/tests/: cli.rs
cbor2-derive/: Cargo.toml  README.md  README.zh-CN.md
cbor2-derive/src/: lib.rs
cbor_conv/: Cargo.toml  README.md
docs/: agent-cookbook.md
examples/: agent_patterns.rs  basic.rs  bytes.rs  core_headers.rs  cose.rs  cose_int_keys.rs  cwt.rs  sequence.rs
posts/: cbor2-full-featured-cbor-for-rust.md  cbor2-full-featured-cbor-for-rust.zh-CN.md
scripts/: build-windows-installer.ps1  publish-homebrew.sh
src/: async_io.rs  cdn.rs  core.rs  de.rs  diag.rs  io.rs  lib.rs  raw.rs  ser.rs  simple.rs  tag.rs  value.rs
src/cdn/: applications.rs  cri.rs  datetime.rs  encode.rs  float.rs  hash.rs  ip.rs  number.rs  parser.rs  tests.rs  types.rs
src/value/: canonical.rs  de.rs  integer.rs  ser.rs
tests/it/: async_io.rs  cose.rs  de_edge.rs  diag.rs  errors.rs  int_keys.rs  main.rs  markers.rs  raw.rs  rfc8949.rs  simple.rs  validate.rs  value.rs  value_api.rs  value_serde.rs
