[workspace]
resolver = "2"
members = [".", "cbor2-derive", "cbor_conv"]

[package]
name = "cbor2"
version = "0.5.0"
authors = ["0xZensh <txr1883@gmail.com>"]
description = "A serde implementation of CBOR (RFC 8949) with a dynamic Value type and tag support."
homepage = "https://github.com/ldclabs/cbor2"
repository = "https://github.com/ldclabs/cbor2"
documentation = "https://docs.rs/cbor2"
readme = "README.md"
keywords = ["cbor", "serde", "serialization", "binary", "encoding"]
categories = ["encoding", "parsing"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.85"
exclude = ["doc/", ".github/"]

[features]
# Enables #[derive(cbor2::Cbor)] for integer map keys and CBOR tags.
derive = ["dep:cbor2-derive", "serde/derive"]

[dependencies]
cbor2-derive = { path = "cbor2-derive", version = "0.5", optional = true }
serde = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
hex = "0.4"

[[example]]
name = "cose"
required-features = ["derive"]

[package.metadata.docs.rs]
all-features = true
