[workspace]
resolver = "2"
members = [".", "cbor2-derive", "cbor2-cli"]

[workspace.package]
version = "1.1.2"
authors = ["0xZensh <txr1883@gmail.com>"]
homepage = "https://github.com/ldclabs/cbor2"
repository = "https://github.com/ldclabs/cbor2"
license = "MIT"
edition = "2021"
rust-version = "1.89"

[package]
name = "cbor2"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Full-featured CBOR (RFC 8949) for serde: async item I/O, canonical encoding, no_std, Value/RawValue, simple values, tags, COSE keys, well-formedness checks and diagnostics."
documentation = "https://docs.rs/cbor2"
readme = "README.md"
keywords = ["cbor", "serde", "canonical", "cose", "no-std"]
categories = ["encoding", "parsing"]
exclude = [".github/"]

[features]
default = ["std"]
# Implements the io traits for std::io::{Read, Write} and adds the HashMap
# conversions. Implies `alloc`.
std = ["alloc", "serde/std"]
# Everything that needs a heap: the Value type, the serde deserializer,
# RawValue, diagnostic notation and the Vec-producing encode functions.
# Without it the crate is serialization, well-formedness checks and the core codec only.
alloc = ["serde/alloc"]
# Enables CDN input extensions that need external crates: cryptographic hash
# literals and CRI literals.
cdn = ["alloc", "dep:iref", "dep:sha2", "dep:sha3"]
# Enables #[derive(cbor2::Cbor)] for integer map keys and CBOR tags.
derive = ["dep:cbor2-derive", "serde/derive"]
# Adapts async_io helpers to futures_io::AsyncRead/AsyncWrite.
futures = ["std", "dep:futures-io"]
# Adapts async_io helpers to tokio::io::AsyncRead/AsyncWrite.
tokio = ["std", "dep:tokio"]

[dependencies]
cbor2-derive = { path = "cbor2-derive", version = "1", optional = true }
futures-io = { version = "0.3", optional = true }
iref = { version = "4.1.0", default-features = false, optional = true }
serde = { version = "1", default-features = false }
sha2 = { version = "0.11", default-features = false, optional = true }
sha3 = { version = "0.12", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = [
  "io-util",
], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
hex = "0.4"

[[example]]
name = "cose"
required-features = ["derive"]

[[example]]
name = "cwt"
required-features = ["derive"]

[package.metadata.docs.rs]
all-features = true
