[package]
name = "cbor2-cli"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A practical cbor CLI for inspecting, decoding and encoding CBOR: diagnostic notation, JSON, hex/base64 and CBOR sequences."
readme = "README.md"
keywords = ["cbor", "json", "diagnostic", "cli", "hex"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
path = "./src/main.rs"
name = "cbor"
doc = false
test = false
bench = false

[dependencies]
cbor2 = { path = "..", version = "1" }
serde_json = "1"
