[package]
name = "cbor2-derive"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Derive cbor2 serde impls for CBOR protocols: integer map keys, semantic tags and inspectable COSE metadata."
documentation = "https://docs.rs/cbor2-derive"
readme = "README.md"
keywords = ["cbor", "serde", "cose", "derive", "tags"]
categories = ["encoding"]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
